[package]
name = "ixperf"
version = "0.1.0"
description = "Performance testing for index algorithms"
repository = "https://github.com/bnclabs/ixperf"
keywords = ["performance", "testing"]
categories = ["testing"]
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.2", default-features = false }
toml = "0.5.3"
rand = "0.6.4"
log = "0.4.8"
env_logger = "0.7.1"
im="12.3.0"
llrb-index = {path = "../llrb-index/"}
rdms = {path = "../rdms/"}
lmdb = "0.8.0"
cpuprofiler = "0.0.2"
jemallocator = "0.3.0"
plotters = "0.2.2"
regex = "1.3.1"
